WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253910
[Cocoa] Setting to drop all assertions immediately
https://bugs.webkit.org/show_bug.cgi?id=253910
Summary
[Cocoa] Setting to drop all assertions immediately
Miguel Salinas
Reported
2023-03-14 14:53:17 PDT
Having an option to quickly remove all assertions would really help with testing background process suspension
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-14 14:53:41 PDT
<
rdar://problem/106722788
>
Miguel Salinas
Comment 2
2023-03-14 16:33:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11524
EWS
Comment 3
2023-03-20 12:03:15 PDT
Committed
261886@main
(a5486e6679b8): <
https://commits.webkit.org/261886@main
> Reviewed commits have been landed. Closing PR #11524 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug