Source/WebKit/UIProcess/WebProcessProxy.h
@@ -604,6 +604,7 @@ private:
 #endif
 
     bool shouldTakeSuspendedAssertion() const;
+    bool shouldDropSuspendedAssertionAfterDelay() const;
 
     enum class IsWeak { No, Yes };
     template<typename T> class WeakOrStrongPtr {
